[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fonts/pixelsix00.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://World/Seeds/wheat.png" type="Texture" id=2]
[ext_resource path="res://World/Sign/Sign.gd" type="Script" id=3]
[ext_resource path="res://Player/slimeball.png" type="Texture" id=4]
[ext_resource path="res://World/Sign/sign.png" type="Texture" id=5]
[ext_resource path="res://Sound/plant.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=112]
extents = Vector2( 16, 16 )

[sub_resource type="DynamicFont" id=113]
size = 8
outline_size = 1
outline_color = Color( 0.27451, 0.27451, 0.27451, 1 )
font_data = ExtResource( 1 )

[sub_resource type="GDScript" id=115]
script/source = "extends Label

func _ready():
	var tween = create_tween().set_loops().set_trans(Tween.TRANS_SINE)
	tween.tween_property(self, \"rect_position\", Vector2.DOWN * 5, 0.5).as_relative()
	tween.tween_property(self, \"rect_position\", Vector2.UP * 5, 0.5).as_relative()
"

[sub_resource type="RectangleShape2D" id=116]
extents = Vector2( 36, 56 )

[sub_resource type="AudioStreamRandomPitch" id=117]
audio_stream = ExtResource( 6 )

[node name="Sign" type="StaticBody2D"]
position = Vector2( 36, -872 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 112 )

[node name="WheatCounter" type="HBoxContainer" parent="."]
margin_left = -28.0
margin_top = -32.0
margin_right = 28.0
margin_bottom = -16.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="WheatCounter"]
margin_right = 16.0
margin_bottom = 16.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="WheatCounter"]
margin_left = 20.0
margin_top = 3.0
margin_right = 45.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 113 )
text = "0 / 30"
align = 1
valign = 1

[node name="SlimeCounter" type="HBoxContainer" parent="."]
margin_left = -28.0
margin_top = -16.0
margin_right = 28.0
mouse_filter = 2
custom_constants/separation = 8

[node name="TextureRect" type="TextureRect" parent="SlimeCounter"]
margin_right = 12.0
margin_bottom = 16.0
rect_min_size = Vector2( 12, 0 )
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="SlimeCounter"]
margin_left = 20.0
margin_top = 3.0
margin_right = 45.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 113 )
text = "0 / 30"
align = 1
valign = 1

[node name="ClickLabel" type="Label" parent="."]
margin_left = -46.5
margin_top = -72.0
margin_right = 16.5
margin_bottom = -51.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 113 )
text = "need items
to build"
align = 1
valign = 1
script = SubResource( 115 )

[node name="AreaSelect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaSelect"]
position = Vector2( 0, -16 )
shape = SubResource( 116 )

[node name="PlaceSound" type="AudioStreamPlayer" parent="."]
stream = SubResource( 117 )
volume_db = -10.0
pitch_scale = 1.3

[connection signal="input_event" from="AreaSelect" to="." method="_on_AreaSelect_input_event"]
[connection signal="mouse_entered" from="AreaSelect" to="." method="_on_AreaSelect_mouse_entered"]
[connection signal="mouse_exited" from="AreaSelect" to="." method="_on_AreaSelect_mouse_exited"]
